fix game log from being cut off on smaller screens

--- a/src/app/components/game/chatbox/chatbox.component.scss
+++ b/src/app/components/game/chatbox/chatbox.component.scss
@@ -1,7 +1,6 @@
 .messages {
-  height: 100%;
   min-width: 250px;
-  height: 100px;
+  height: 300px;
   overflow-y: scroll;
   background-color: #fff;
   border-radius: 5px;
@@ -19,5 +18,10 @@
 
   @media (max-width: 500px) {
     height: 200px !important;
+  }
+
+  &.tall {
+    height: calc(100vh - 110px);
+    max-height: 600px;
   }
 }
